--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,19 +46,40 @@ table {
     float: right;
     border-collapse: collapse;
     width: 100%;
-    margin: 20px 0;
+    margin: 20px 0px;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 th,
 td {
     text-align: center;
-    padding: 10px;
-    border: 1px solid #fff;
-
+    padding: 12px 15px;
 }
 
 th {
-    background-color: lightgray;
+    background-color: #009879;
+    color: #ffffff;
+    border-left: 1px solid #dddddd;;
+}
+
+tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+tbody tr:last-of-type{
+    border-bottom: 2px solid #009879;
+}
+
+tbody tr:hover{
+    font-weight: bold;
+    color: #009879;
 }
 
 caption {
