pep8 code formating

--- a/base/templates/base/add_product.html
+++ b/base/templates/base/add_product.html
@@ -5,8 +5,7 @@
             {% csrf_token %}
             <label for="prod_name">שם הפריט</label>
             <input type="text" id="prod_name" name="prod_name" required>
-
-            <label for="prod_serial">מקט הפריט</label>
+            <label for="prod_serial">מק''ט הפריט</label>
             <input type="text" id="prod_serial" name="prod_serial" required>
             <div>
                 <input type="submit" value="להוסיף">
