--- a/base/templates/base/asks_by_product.html
+++ b/base/templates/base/asks_by_product.html
@@ -1,9 +1,9 @@
 {% extends "main.html" %}
 {% block content %}
-     <div class="requests-page-admin">
+    <div class="requests-page-admin">
         <table>
             <caption>
-               {{ product.name }} מידע על ההאשלות של סטודנטים\מרצים לפריט
+                {{ product.name }} מידע על ההאשלות של סטודנטים\מרצים לפריט
             </caption>
             <colgroup>
                 <col span="8">
@@ -15,8 +15,8 @@
                     <th>תפקיד</th>
                     <th>מייל</th>
                     <th>מס' טלפון</th>
-                    <th>שם של פריט</th>
-                    <th>מקט של פריט</th>
+                    <th>שם הפריט</th>
+                    <th>מק''ט הפריט</th>
                     <th>שם משפחה</th>
                     <th>שפ פרטי</th>
                     <th>ת.ז</th>
