--- a/base/templates/base/requests.html
+++ b/base/templates/base/requests.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-     <div class="requests-page-admin">
+    <div class="requests-page-admin">
         <table>
             <caption>
                 מידע על התורים להשאלות
@@ -15,8 +15,8 @@
                     <th>תפקיד</th>
                     <th>מייל</th>
                     <th>מס' טלפון</th>
-                    <th>שם של פריט</th>
-                    <th>מקט של פריט</th>
+                    <th>שם הפריט</th>
+                    <th>מק''ט הפריט</th>
                     <th>שם משפחה</th>
                     <th>שפ פרטי</th>
                     <th>ת.ז</th>
