--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -2,8 +2,8 @@
     <div class="menu">
         <div class="item">
             {% for category in categories %}
-                {% if category.children.count != 0 %}
-                    <a class="cat-link" href="{% url "show_category" category.id %}">{{ category.name }}</a>
+                {% if category.children.count %}
+                    <a class="cat-link" href="{% url 'show_category' category.id %}">{{ category.name }}</a>
                     <a class="sub-btn"><i class="fas fa-angle-right dropdown"></i></a>
                     <div class="sub-menu">
                         {% for sub_cat in category.children.all %}
@@ -11,15 +11,14 @@
                         {% endfor %}
                     </div>
                 {% elif category.parent_id == None  %}
-                    <a class="cat-link" href="{% url "show_category" category.id %}">{{ category.name }}</a>
+                    <a class="cat-link" href="{% url 'show_category' category.id %}">{{ category.name }}</a>
                 {% endif %}
             {% endfor %}
         </div>
         {% if user_type == "admin" %}
             <div class="item">
-                <a class="cat-link new-cat" href="{% url "add_category" %}">קטגוריה חדשה</a>
+                <a class="cat-link new-cat" href="{% url 'add_category' %}">קטגוריה חדשה</a>
             </div>
         {% endif %}
     </div>
 </div>
-
