--- a/base/templates/base/add_category.html
+++ b/base/templates/base/add_category.html
@@ -5,18 +5,19 @@
             {% csrf_token %}
             <label for="cat_name">שם</label>
             <input type="text" id="cat_name" name="cat_name" required>
-
             <label for="cat_image">תמונה</label>
             <input type="file" id="cat_image" name="cat_image">
-
-            <label for="cat_parent">קטגוריה האב</label>
+            <label for="cat_parent">קטגורית האב</label>
             <select id="cat_parent" name="cat_parent">
                 {% for category in categories %}
-                    <option value="{{ category }}">{{ category }}</option>
+                    <option value="{{ category }}">
+                        {{ category }}
+                    </option>
                 {% endfor %}
-                <option value="בלי">ללא קטגוריה אב</option>
+                <option value="בלי">
+                    ללא קטגורית אב
+                </option>
             </select>
-
             <div>
                 <input type="submit" value="להוסיף">
             </div>
