--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,22 +1,25 @@
 <header class="header">
     <div class="header-main-content">
         <div class="user-logo">
-            <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 29 29" width="60" height="50">
-                <a href="{% url "personal_det" %}">
+            <svg xmlns="http://www.w3.org/2000/svg"
+                 data-name="Layer 1"
+                 viewBox="0 0 29 29"
+                 width="60"
+                 height="50">
+                <a href="{% url 'personal_det' %}">
                     <path d="M14.5 2A12.514 12.514 0 0 0 2 14.5 12.521 12.521 0 0 0 14.5 27a12.5 12.5 0 0 0 0-25Zm7.603 19.713a8.48 8.48 0 0 0-15.199.008A10.367 10.367 0 0 1 4 14.5a10.5 10.5 0 0 1 21 0 10.368 10.368 0 0 1-2.897 7.213ZM14.5 7a4.5 4.5 0 1 0 4.5 4.5A4.5 4.5 0 0 0 14.5 7Z"/>
                 </a>
             </svg>
         </div>
-
         <ul class="navigation">
             {% include "base/navbar_buttons/contact_us_button.html" %}
             {% if user_type == "admin" or user_type == "moderator" %}
-            {% include "base/navbar_buttons/statistics_button.html" %}
+                {% include "base/navbar_buttons/statistics_button.html" %}
             {% endif %}
             {% include "base/navbar_buttons/special_requests_button.html" %}
             {% include "base/navbar_buttons/requests_button.html" %}
             {% if user_type == "admin" %}
-            {% include "base/navbar_buttons/users_button.html" %}
+                {% include "base/navbar_buttons/users_button.html" %}
             {% endif %}
             {% include "base/navbar_buttons/borrowings_button.html" %}
             {% include "base/navbar_buttons/home_button.html" %}
