decomposition into folders

--- a/base/templates/base/category_manipulations/show_category.html
+++ b/base/templates/base/category_manipulations/show_category.html
@@ -7,6 +7,12 @@
                 <div class="prod-buttons">
                     <a href="{% url 'add_product' category.id %}" class="edit-btn">הוספת פריט</a>
                 </div>
+                <div class="prod-buttons">
+                    <a href="{% url 'add_product' category.id %}" class="edit-btn">השאלות</a>
+                </div>
+                <div class="prod-buttons">
+                    <a href="{% url 'add_product' category.id %}" class="edit-btn">הוספת פריט</a>
+                </div>
             </caption>
             <colgroup>
                 <col span="8">
@@ -15,10 +21,10 @@
                 <tr>
                     <th>למחוק את הפריט</th>
                     <th>לשנות את הפריט</th>
-                    <th>תקין\לא תקין</th>
-                    <th>השאלות לפריט</th>
-                    <th>אנשים בתור</th>
-                    <th>בהשאלה</th>
+                    {% comment %} <th>תקין\לא תקין</th> {% endcomment %}
+                    {% comment %} <th>השאלות לפריט</th> {% endcomment %}
+                    {% comment %} <th>אנשים בתור</th> {% endcomment %}
+                    <th>זמין</th>
                     <th>שם הפריט</th>
                     <th>מק''ט</th>
                 </tr>
@@ -36,21 +42,21 @@
                                 <a href="{% url 'edit_product' product.id %}" class="edit-btn">שינוי הפריט</a>
                             </div>
                         </td>
-                        <td>
+                        {% comment %} <td>
                             <div class="prod-buttons">
                                 <a href="{% url 'bad_product' product.id %}" class="edit-btn">לשנות תקינות</a>
                             </div>
-                        </td>
-                        <td>
+                        </td> {% endcomment %}
+                        {% comment %} <td>
                             <div class="prod-buttons">
-                                <a href="{% url 'borrowings_by_prod' product.id %}" class="edit-btn">לראות השאלות</a>
+                                <a href="{% url 'borrowings_per_product' product.id %}" class="edit-btn">לראות השאלות</a>
                             </div>
-                        </td>
-                        <td>
+                        </td> {% endcomment %}
+                        {% comment %} <td>
                             <div class="prod-buttons">
-                                <a href="{% url 'requests_by_prod' product.id %}" class="edit-btn">לראות תור</a>
+                                <a href="{% url 'requests_per_product' product.id %}" class="edit-btn">לראות תור</a>
                             </div>
-                        </td>
+                        </td> {% endcomment %}
                         <td>{{ product.is_available }}</td>
                         <td>{{ product.name }}</td>
                         <td>{{ product.stock_num }}</td>
