--- a/base/templates/base/product_manipulations/edit_product.html
+++ b/base/templates/base/product_manipulations/edit_product.html
@@ -9,10 +9,10 @@
                    name="prod_name"
                    value="{{ product.name }}"
                    required>
-            <label for="prod_serial">מק''ט הפריט</label>
+            <label for="stock_num">מק''ט הפריט</label>
             <input type="text"
-                   id="prod_serial"
-                   name="prod_serial"
+                   id="stock_num"
+                   name="stock_num"
                    value="{{ product.stock_num }}"
                    required>
             <label for="cat_parent">קטגוריה</label>
