--- a/base/templates/base/category_manipulations/add_category.html
+++ b/base/templates/base/category_manipulations/add_category.html
@@ -3,7 +3,7 @@
     <div class="add_category">
         <form action="" method="POST" class="add-category-form">
             {% csrf_token %}
-            <label for="cat_name">שם</label>
+            <label for="cat_name">שם הקטגוריה</label>
             <input type="text" id="cat_name" name="cat_name" required>
             <label for="cat_image">תמונה</label>
             <input type="file" id="cat_image" name="cat_image">
