--- a/base/templates/base/product_manipulations/add_product.html
+++ b/base/templates/base/product_manipulations/add_product.html
@@ -5,8 +5,8 @@
             {% csrf_token %}
             <label for="prod_name">שם הפריט</label>
             <input type="text" id="prod_name" name="prod_name" required>
-            <label for="prod_serial">מק''ט הפריט</label>
-            <input type="text" id="prod_serial" name="prod_serial" required>
+            <label for="stock_num">מק''ט הפריט</label>
+            <input type="text" id="stock_num" name="stock_num" required>
             <div>
                 <input type="submit" value="להוסיף">
             </div>
