--- a/base/templates/base/requests_per_cat.html
+++ b/base/templates/base/requests_per_cat.html
@@ -3,7 +3,7 @@
     <div class="requests-page-admin">
         <table>
             <caption>
-                {{ product.name }} מידע על ההאשלות של סטודנטים\מרצים לפריט
+                {{ category.name }} מידע על התורים להשאלות לקטגוריה
             </caption>
             <colgroup>
                 <col span="8">
